@startuml

title __ROOM's Class Diagram__\n

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.room {
      class jp.ac.shibaura.it.ie.domain.application.room.RoomExitInteractor {
          + handle()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.room {
      class jp.ac.shibaura.it.ie.domain.application.room.RoomStartInteractor {
          + handle()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.room {
      class jp.ac.shibaura.it.ie.domain.application.room.RoomWaitInteractor {
          + handle()
      }
    }
  }
  

  jp.ac.shibaura.it.ie.domain.application.room.RoomExitInteractor .up.|> jp.ac.shibaura.it.ie.usecases.room.exit.RoomExitUseCase
  jp.ac.shibaura.it.ie.domain.application.room.RoomExitInteractor o-- jp.ac.shibaura.it.ie.domain.model.room.RoomRepository : roomRepository
  jp.ac.shibaura.it.ie.domain.application.room.RoomStartInteractor .up.|> jp.ac.shibaura.it.ie.usecases.room.start.RoomStartUseCase
  jp.ac.shibaura.it.ie.domain.application.room.RoomStartInteractor o-- jp.ac.shibaura.it.ie.domain.model.user.UserRepository : userRepository
  jp.ac.shibaura.it.ie.domain.application.room.RoomWaitInteractor .up.|> jp.ac.shibaura.it.ie.usecases.room.wait.RoomWaitUseCase
  jp.ac.shibaura.it.ie.domain.application.room.RoomWaitInteractor o-- jp.ac.shibaura.it.ie.domain.model.room.RoomRepository : roomRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
